deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  # namespace: ingress-nginx 
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
       name: firstpod
       labels:
          app: my-app
    spec:
      containers:
      - name: c1
        image: tusharpareek/dockerpractice
        ports:
        - containerPort: 8000
