service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  # namespace: ingress-nginx
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
