ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: minimal-ingress

  annotations:

    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "service-remote-manager-frontend"
    nginx.org/force-ssl-redirect: "true"

spec:

  rules:

    - host: localhost

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: my-app

                port:

                  number: 80
